Fix broken layout

--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ code {
 #root {
   width: 100%;
   height: 100vh;
-  background-color: rgb(224, 224, 224);
+  background-color: #f5f6fa;
 }
 
 .main {
@@ -50,13 +50,23 @@ code {
 
 .panel-nav {
   width: 100%;
-  height: 13vh;
+  height: 10vh;
   background-color: #fff;
   display: flex;
 }
 
 .panel-nav h1 {
   padding-left: 5%;
+  width: 15rem;
+  height: 2.313rem;
+  font-size: 1.875rem;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: var(--azure);
+  font-family: Montserrat, sans-serif;
 }
 
 .nav-ul {
@@ -158,16 +168,15 @@ a {
 }
 
 .progress span {
-  width: 5rem;
-  height: 1.125rem;
-  opacity: 0.5;
-  font-family: Montserrat, sans-serif;
-  font-size: 0.875rem;
-  font-weight: normal;
+  width: 4.688rem;
+  height: 1.313rem;
+  font-family: RobotoSlab, sans-serif;
+  font-size: 1rem;
+  font-weight: 300;
   font-stretch: normal;
   font-style: normal;
   line-height: normal;
-  letter-spacing: normal;
+  letter-spacing: -0.4px;
   color: #121212;
 }
 
@@ -197,15 +206,17 @@ a {
 }
 
 hr {
-  margin: 0;
+  height: 4.375rem;
+  margin-top: 7%;
 }
 
 form {
   background-color: #f3f3f3;
-  width: 100%;
+  width: 97%;
   height: auto;
   display: flex;
   justify-content: space-between;
+  padding-left: 3%;
 }
 
 .form-h1 {
@@ -219,6 +230,7 @@ form {
   line-height: normal;
   letter-spacing: -0.18px;
   color: #888;
+  padding-left: 3%;
 }
 
 input,
